fix: CSS変数の整理とヘッダーz-index設定

--- a/src/assets/styles/layouts/_site-header.scss
+++ b/src/assets/styles/layouts/_site-header.scss
@@ -5,6 +5,7 @@
 		position: fixed;
 		left: 0;
 		top: 0;
+		z-index: 10;
 		width: 100%;
 		background-color: #eee;
 		padding: 0 40px;
